[gd_scene load_steps=13 format=3 uid="uid://ctt8u7i8yhivi"]

[ext_resource type="Script" uid="uid://neoi8dramtru" path="res://Scenes/zombie.gd" id="1_jmu02"]
[ext_resource type="Shader" uid="uid://2auxmwafr4ty" path="res://Scenes/flicker.gdshader" id="2_eseir"]
[ext_resource type="Texture2D" uid="uid://bxf84fl0udapi" path="res://graphics/Enemies/zombie walk 2x1.png" id="3_7nqyo"]
[ext_resource type="AudioStream" uid="uid://447ol3pmbxsl" path="res://assets/sounds/zombie-6851.mp3" id="4_vy0uf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lnshm"]
resource_local_to_scene = true
shader = ExtResource("2_eseir")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/amount = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_x5rsa"]
atlas = ExtResource("3_7nqyo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogcpr"]
atlas = ExtResource("3_7nqyo")
region = Rect2(17, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i82o5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5rsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogcpr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jw3ev"]
radius = 6.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4h2d"]
size = Vector2(12, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pub2r"]
size = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dcb2u"]
size = Vector2(1, 1)

[node name="Zombie" type="Area2D"]
collision_layer = 4
collision_mask = 18
script = ExtResource("1_jmu02")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_lnshm")
position = Vector2(1, -4)
sprite_frames = SubResource("SpriteFrames_i82o5")
autoplay = "default"
frame = 1
frame_progress = 0.5271341

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(1, -2)
shape = SubResource("CapsuleShape2D_jw3ev")

[node name="BorderArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BorderArea2D"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_x4h2d")

[node name="RightCliffArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCliffArea"]
position = Vector2(5, 5)
shape = SubResource("RectangleShape2D_pub2r")

[node name="LeftCliffArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCliffArea"]
position = Vector2(-3, 5)
shape = SubResource("RectangleShape2D_dcb2u")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -8.0
offset_top = -10.0
offset_right = 28.0
offset_bottom = -4.0
scale = Vector2(0.5, 0.5)
show_percentage = false

[node name="regin_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_vy0uf")
volume_db = -6.679
pitch_scale = 0.63
max_distance = 200.0
panning_strength = 0.05

[node name="playsound" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="BorderArea2D" to="." method="_on_border_area_2d_body_entered"]
[connection signal="body_exited" from="RightCliffArea" to="." method="_on_right_cliff_area_body_exited"]
[connection signal="body_exited" from="LeftCliffArea" to="." method="_on_left_cliff_area_body_exited"]
[connection signal="timeout" from="playsound" to="." method="_on_playsound_timeout"]
